# home-energy-monitor

./: CMakeLists.txt
config/: config.json
inc/: ADE7878A.h  config_manager.h  exceptions.h  http_client.h  i2c_interface.h  logger.h
scripts/: mock_server.py  run_simulator.sh  setup.sh
src/: ADE7878A.cpp  energy_monitor.cpp  exceptions.cpp  http_client.cpp  i2c_interface.cpp  logger.cpp  main.cpp
test/: CMakeLists.txt  test_ADE7878A.cpp  test_i2c.cpp
